# Realms2Riches

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SOVEREIGN_START.ps1  deploy.ps1  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  main.yml
data/affiliates/: affiliates.json
data/assets/: sovereign_strategy_guide_v3.txt
data/blog/: future-of-agentic-ai.md  posts.json  report-20260221-022121.md  report-20260221-022144.md  report-20260221-022204.md  report-20260221-022626.md  report-20260221-023147.md  report-20260221-023845.md  report-20260221-023934.md  report-20260221-024038.md  report-20260221-024208.md  report-20260221-024312.md  report-20260221-024443.md  report-20260221-024554.md  report-20260221-024658.md  report-20260221-024919.md  report-20260221-030442.md  report-20260221-032543.md  report-20260221-033445.md  report-20260221-033547.md  report-20260221-033809.md  report-20260221-034551.md  report-20260221-034652.md  report-20260221-035014.md  report-20260221-035256.md  report-20260221-035438.md  report-20260221-035621.md  report-20260221-035803.md  report-20260221-040359.md  report-20260221-040801.md  report-20260221-040902.md  report-20260221-041224.md  report-20260221-041246.md  report-20260221-041728.md  report-20260221-042449.md  report-20260221-042811.md  report-20260221-043133.md  report-20260221-043855.md  report-20260221-044416.md  report-20260221-045338.md  (+645 more)
data/catalog/: prices.csv  products.csv
data/governance/: rules.yaml
data/lineage/: integrity_manifest.json  launch_manifest.json  launch_readiness_report.json
data/store/: products.json
data/vector_store/: sovereign_memory.json
docs/: AGENTS.md  ARCHITECTURE.md  CONTENT_CALENDAR.md  EMAIL_SEQUENCES.md  GOVERNANCE.md  MARKETING_PLAN.md  SOVEREIGN_TEST_MANUAL.md
orchestrator/: README.md
scripts/: simulate_concurrency.py  verify_all_tracks_final.py  verify_live_tracks.py  verify_production_capabilities.py
(+100 files in other folders)
