[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "Agentic Software Development Agency Orchestrator"
authors = ["Gemini Orchestrator <orchestrator@gemini.ai>"]
readme = "README.md"
packages = [{include = "orchestrator"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.2.1"
openai = "^1.10.0"
groq = "1.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.0"
chromadb = "^0.4.22"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
docker = "^7.0.0"
gitpython = "^3.1.40"
tenacity = "^8.2.3"
stripe = "^10.0.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
black = "^24.0.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
